Tiny change before starting again

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -44,5 +44,6 @@
 	color: white;
 	font-family: 'Josefin Sans', sans-serif;
   font-size: 10.8vw;
+	text-transform: uppercase;
   margin-bottom: -0.2em;
 }
