--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -20,7 +20,12 @@
   margin: 1em 0;
 	display: flex;
 	flex-direction: row;
+	align-items: flex-end;
   column-gap: 1rem;
+}
+
+.Footer__SocialMedia__image {
+	display: block;
 }
 
 .Footer__copyright {
